--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html> 
-<h1> Jason Scanlon </h1>
-<p> hello </p>
+<html>
+<head> 
+	<title> Jason Scanlon's Portfolio </title>
+	<link rel="html" href="resume.html" />
+</head>
+<body>
+	<img src="rosterPic.jpg" alt = "Roster picure">
+	<h1> 
+</body>
+</html>
