--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title> Jason Scanlon's Portfolio </title>
 </head>
 <body>
+	<h1> Roster picture </h1>
 	<img src="rosterPic.jpg" alt="Roster picure">
 </body>
 </html>
