--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 	<h1> Roster picture </h1>
-	<img src="rosterPic.jpg" alt="Roster picure">
+	<!--<img src="rosterPic.jpg" alt="Roster picure"> -->
 </body>
 </html>
