--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html> 
 <html>
 <head> 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1"/>
-	<title> Jason Scanlon's Portfolio </title>
+<meta charset="utf-8">
+<title> Jason Scanlon's Portfolio </title>
 </head>
 <body>
 	<h1> Roster picture </h1>
-	<!--<img src="rosterPic.jpg" alt="Roster picure"> -->
+	<img src="rosterPic.jpg" alt="Roster picure">
 </body>
 </html>
