add link to resume

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 	<h1> Roster picture </h1>
 	<img src="rosterPic.jpg" alt="Roster picure">
+	<a href="resume.html"> Resume </a>
 </body>
 </html>
