Updated resume with all sections

--- a/resume.html
+++ b/resume.html
@@ -6,34 +6,84 @@
 	</head>
 <body>
 	<!-- Header of resume -->
-	<div>
+	<div class = "header">
 		<h1> Jason Scanlon </h1>
-		<h2> 7 Preston Drive, Barrington,RI 02806 </h2> 
-		<h3> Email:scanlonj01@gmail.com Phone: (401)-595-1732 </h3>
+		<h2 id = "address"> 7 Preston Drive, Barrington,RI 02806 </h2> 
+		<h3 id = "personal-info"> Email:scanlonj01@gmail.com Phone: (401)-595-1732 </h3>
 	</div>
 	<!-- Education -->
-	<div> 
-		<h1> Tufts University Medford, MA </h1>
-		<h2> September 2016-May 2020 </h2>
-		<h3> Major: B.S. in Engineering Psychology </h3>
-		<h4> Minor: Computer Science and Economics </h4>
-		<li> GPA- 3.54/4.0 </l1>
-		<li> Relevant Coursework- Multivariable Calculus, linear Algebra, Computer Engineering, Intro to Computer Science </l2>
+	<div class = "education"> 
+		<h1> EDUCATION: </h1>
+		<h2> Tufts University Medford, MA </h2>
+		<h3> September 2016-May 2020 </h3>
+		<h4> Major: B.S. in Engineering Psychology </h4>
+		<h5> Minor: Computer Science and Economics </h5>
+		<li> GPA- 3.54/4.0 </li>
+		<li> Relevant Coursework- Multivariable Calculus, linear 
+		Algebra, Computer Engineering, Intro to Computer Science </li>
 	</div>
+
 	<!-- Experience -->
-	<div>
+	<div class = "experience">
 		<!-- Bangos wristbands -->
-		<h1> BANGOS Wristbands </h1>
-		<h2> Founder: Jan 2015-Present </h2>
+		<h1> Experience: </h1>
+		<h2> BANGOS Wristbands </h2>
+		<h3> Founder: Jan 2015-Present </h3>
 		<li> Started a customized tennis wristband business </li>
 		<li> Sold over 100 wristbands to tennis teams and clubs </li>
 		<!--- American Equipment -->
-		<h1> American Aerial Equipment Company </h1>
-		<h2> Project Intern: June 2017-August 2017 </h2>
-		<li> Revised employee handbook (22 pages) by adding clauses regarding workplace safety and employee rights </li>
+		<h2> American Aerial Equipment Company, </h2> <p> Attleboro, MA 
+		</p>
+		<h3> Project Intern: June 2017-August 2017 </h3>
+		<li> Revised employee handbook (22 pages) by adding clauses 
+		regarding workplace safety and employee rights </li>
 		<li> Sold over 100 wristbands to tennis teams and clubs </li>
+		<!-- Dona Marie Designs -->
+		<h2> Dona Marie Designs, </h2> <p> Providence, RI </p>
+		<h3> Marketing Intern: June 2017-July 2017 </h3>
+		<li> Designed logos for pricing tags using Adobe illustrator </
+			li>
+		<li> Created flyers that advertised customized handbag designs 
+		</li>
+		<!-- RI Tennis Academy -->
+		<h2> RI Tennis Academy/Self-Employed </h2>
+		<h3> Teaching Professional: June 2016-August 2016 </h3>
+		<li> Taught tennis players from elementary to high school at RI
+		 tennis academy summer camp
+		<li> Conducted private lessons for 5 players aspiring to play high chool tennis </li>
 	</div>
-	<img src="rosterPic.jpg" alt="Roster picure">
-	<p> <a href="resume.html"> Resume </a>
+
+	<!-- Projects -->
+	<div class = "Projects">
+		<h1> PROJECTS </h1>
+		<h2> Memory Test on MATLAB platform </h2>
+		<h3> Computer Engineering Final Project </h3>
+		<li> Programmed an interactive graphical user interface that tests memory adn brain science concepts </li>
+		<h2> Programmed 2048 </h2>
+		<h3> Computer Science Final Project </h3>
+		<li> Programmed a C++ based version of the interactive 2048 game </li>
+	</div>
+
+	<!-- Extra-Cirricular Activities -->
+	<div class = "Extra-cirricular activities"> 
+		<h1> EXTRA-CIRRICULAR ACTIVITIES </h1>
+		<h2> Tufts Varsity Tennis Team </h2>
+		<li> Practice and play teams/tournaments in fall and spring season (12+ hours/week)
+		<li> Representative for Student-Athlete Advisory Committee(SAAC)
+		<li> RI Tennis State Champion (2016) </li>
+		<h2> Tufts Trading Fund </h2>
+		<h3> Executive Board/Leader of Quant Research Group </h3>
+		<li> Pitched buying Dow Jones ETF using fundamental and technical analysis </li>
+		<h2> Admissions Blogger for Jumbo Talk </h2>
+		<li> Publish 2 personal Tufts related stories a month for prospective student </li>
+		<h1> Venture Lab/Innovation Incubator </h1>
+	</div>
+
+	<!-- Interests --> 
+	<div class = "Interests"> 
+		<h1> INTERESTS </h1>
+		<li> Composing beats on Logic ProX and learning sound engineering </li>
+	</div>
+	
 </body>
 </html>
