--- a/resume.html
+++ b/resume.html
@@ -8,8 +8,8 @@
 	</head>
 <body>
 	<!-- Header of resume -->
-	<div class = "header">
-		<h1> Jason Scanlon </h1>
+	<div class = "profile">
+		<h1 id = "name"> Jason Scanlon </h1>
 		<h2 id = "address"> 7 Preston Drive, Barrington,RI 02806 </h2> 
 		<h3 id = "personal-info"> Email:scanlonj01@gmail.com Phone: (401)-595-1732 </h3>
 	</div>
@@ -18,8 +18,8 @@
 		<h1> EDUCATION: </h1>
 		<h2> Tufts University Medford, MA </h2>
 		<h3> September 2016-May 2020 </h3>
-		<h4> Major: B.S. in Engineering Psychology </h4>
-		<h5> Minor: Computer Science and Economics </h5>
+		<p> Major: B.S. in Engineering Psychology </p>
+		<p> Minor: Computer Science and Economics </p>
 		<li> GPA- 3.54/4.0 </li>
 		<li> Relevant Coursework- Multivariable Calculus, linear 
 		Algebra, Computer Engineering, Intro to Computer Science </li>
