--- a/resume.html
+++ b/resume.html
@@ -34,14 +34,13 @@
 		<li> Started a customized tennis wristband business </li>
 		<li> Sold over 100 wristbands to tennis teams and clubs </li>
 		<!--- American Equipment -->
-		<h2> American Aerial Equipment Company, </h2> <p> Attleboro, MA 
-		</p>
+		<h2> American Aerial Equipment Company, Attleboro, MA </h2>
 		<h3> Project Intern: June 2017-August 2017 </h3>
 		<li> Revised employee handbook (22 pages) by adding clauses 
 		regarding workplace safety and employee rights </li>
 		<li> Sold over 100 wristbands to tennis teams and clubs </li>
 		<!-- Dona Marie Designs -->
-		<h2> Dona Marie Designs, </h2> <p> Providence, RI </p>
+		<h2> Dona Marie Designs, Providence, RI </h2>
 		<h3> Marketing Intern: June 2017-July 2017 </h3>
 		<li> Designed logos for pricing tags using Adobe illustrator </
 			li>
@@ -78,7 +77,8 @@
 		<li> Pitched buying Dow Jones ETF using fundamental and technical analysis </li>
 		<h2> Admissions Blogger for Jumbo Talk </h2>
 		<li> Publish 2 personal Tufts related stories a month for prospective student </li>
-		<h1> Venture Lab/Innovation Incubator </h1>
+		<h2> Venture Lab/Innovation Incubator </h2>
+		<li> Selected to be a part of a group with other aspiring entrepeneurs </li>
 	</div>
 
 	<!-- Interests --> 
