change header in profile section

--- a/resume.html
+++ b/resume.html
@@ -18,9 +18,8 @@
 		<h1> EDUCATION: </h1>
 		<h2> Tufts University Medford, MA </h2>
 		<h3> September 2016-May 2020 </h3>
-		<p> Major: B.S. in Engineering Psychology </p>
-		<p> Minor: Computer Science and Economics </p>
-		<li> GPA- 3.54/4.0 </li>
+		<p> Major: B.S. in Engineering Psychology, Minor: Computer Science and Economics </p>
+		<li> GPA: 3.54/4.0 </li>
 		<li> Relevant Coursework- Multivariable Calculus, linear 
 		Algebra, Computer Engineering, Intro to Computer Science </li>
 	</div>
