Change class names in div sections

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 		<h2> Tufts University Medford, MA </h2>
 		<h3> September 2016-May 2020 </h3>
 		<p> Major: B.S. in Engineering Psychology, Minor: Computer Science and Economics </p>
-		<li> GPA: 3.54/4.0 </li>
+		<li> GPA:3.54/4.0 </li>
 		<li> Relevant Coursework- Multivariable Calculus, linear 
 		Algebra, Computer Engineering, Intro to Computer Science </li>
 	</div>
@@ -54,7 +54,7 @@
 	</div>
 
 	<!-- Projects -->
-	<div class = "Projects">
+	<div class = "projects">
 		<h1> PROJECTS </h1>
 		<h2> Memory Test on MATLAB platform </h2>
 		<h3> Computer Engineering Final Project </h3>
@@ -65,7 +65,7 @@
 	</div>
 
 	<!-- Extra-Cirricular Activities -->
-	<div class = "Extra-cirricular activities"> 
+	<div class = "extra-cirricular"> 
 		<h1> EXTRA-CIRRICULAR ACTIVITIES </h1>
 		<h2> Tufts Varsity Tennis Team </h2>
 		<li> Practice and play teams/tournaments in fall and spring season (12+ hours/week)
@@ -81,7 +81,7 @@
 	</div>
 
 	<!-- Interests --> 
-	<div class = "Interests"> 
+	<div class = "interests"> 
 		<h1> INTERESTS </h1>
 		<li> Composing beats on Logic ProX and learning sound engineering </li>
 	</div>
