Add skills section

--- a/resume.html
+++ b/resume.html
@@ -81,9 +81,9 @@
 	</div>
 
 	<!-- Interests --> 
-	<div class = "interests"> 
-		<h1> INTERESTS </h1>
-		<li> Composing beats on Logic ProX and learning sound engineering </li>
+	<div class = "Skills"> 
+		<h1> SKILLS </h1>
+		<li> C++ Programming </li>
 	</div>
 	
 </body>
