Change name of skills class

--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,7 @@
 	</div>
 
 	<!-- Interests --> 
-	<div class = "Skills"> 
+	<div class = "skills"> 
 		<h1> SKILLS </h1>
 		<li> C++ Programming </li>
 	</div>
