Add link to bio and create box model

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head> 
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1"/>
+	<link rel="stylesheet" href="main.css"/>
 <title> Jason Scanlon's Portfolio </title>
 </head>
 <body>
-	<h1> Roster picture </h1>
-	<img src="rosterPic.jpg" alt="Roster picure">
+	<div> 
+	<h1> Jason Scanlon </h1>
+	<img src="handshakepic.jpg" alt="handshake pic">
 	<p> <a href="resume.html"> Resume </a>
+	<p> <a href ="bio.html"> Biography </a> </p>
+	</div>
 </body>
 </html>
