Add more to skills section

--- a/resume.html
+++ b/resume.html
@@ -84,6 +84,8 @@
 	<div class = "skills"> 
 		<h1> SKILLS </h1>
 		<li> C++ Programming </li>
+		<li> Adobe Photoshop </li>
+		<li> MATLAB programming </li>
 	</div>
 	
 </body>
