Fix image height and width

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div> 
 	<h1> Jason Scanlon </h1>
-	<img src="handshakepic.jpg" alt="handshakepic">
+	<img src="handshakepic.jpg" alt="handshakepic" height="100" width="100">
 	<p> <a href="resume.html"> Resume </a>
 	<p> <a href ="bio.html"> Biography </a> </p>
 	</div>
